<resources>
    <string name="app_name">新闻</string>

    <!--bottom bar-->
    <string name="xiabianlan_xinwen">News</string>
    <string name="xiabianlan_me">Mine</string>
    <string name="xiabianlan_me1">Register</string>

    <!--Side bar-->
    <string name="cebianlan_item1">Switch Mode</string>
    <string name="cebianlan_item2">Get location</string>
    <string name="cebianlan_item3">Auto switch Mode(Open)</string>
    <string name="cebianlan_item4">Auto switch Mode(Closed)</string>
    <string name="cebianlan_item5">Date</string>
    <string name="cebianlan_item6">Time</string>

    <!--Side bar button-->
    <string name="cebianlan_open">Open navigation drawer</string>
    <string name="cebianlan_close">Close navigation drawer</string>
    <string name="action_settings">setting</string>
    <string name="ask_loc_permission">Permission</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="no_results">No result</string>

    <!--Get location popover-->
    <string name="checkNetworkState">Please waiting or check GPS service. Using default location</string>

    <!--webview-->
    <string name="WebView">WebView</string>

    <!--Diglog-->
    <string name="mydialogue1"> Are you sure to quit?</string>
    <string name="mydialogue6"> Switch mode to the correct standard (night mode is required from 22:00 to 6:00, other times are day mode) </string>
    <string name="b1">Yes</string>
    <string name="b2">No</string>
    <string name="b3">Ok</string>



    <!--mine page(Registration and Login)-->
    <string name="mine1">Email</string>
    <string name="mine2">PassWord</string>
    <string name="mine3">Login</string>
    <string name="mine4">Forget password</string>
    <string name="mine5">UserName</string>
    <string name="mine6">Register</string>
    <string name="mine7">Confirm the PassWord</string>


    <!--mine page(information)-->
    <string name="t1">Welcome</string>
    <string name="t2">Polarbear</string>
    <string name="m1">Until Today</string>
    <string name="m2">395032 Users</string>
    <string name="m3">enjoy our service</string>
    <string name="b11">300</string>
    <string name="b22">gender: Male</string>
    <string name="b33">Name: Peter</string>
    <string name="b44">Inbox</string>
    <string name="b55">setting</string>
    <string name="b66">Complaint</string>
    <string name="b77">Wait for develop</string>
    <string name="connectionFailed">Connection Failed</string>


</resources>