<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/other" android:checkableBehavior="single">
        <item
            android:id="@+id/night_mode"
            android:icon="@drawable/night_mode"
            android:title="@string/cebianlan_item1"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/cebianlan_item2"/>
        <item
            android:id="@+id/huancun"
            android:icon="@drawable/huancun"
            android:title="@string/cebianlan_item3"/>
    </group>

    <item android:title="日常">
        <menu>
            <item
                android:id="@+id/weather"
                android:icon="@drawable/weather"
                android:title="@string/cebianlan_item4"/>
            <item
                android:id="@+id/rili"
                android:icon="@drawable/rili"
                android:title="@string/cebianlan_item5"/>
            <item
                android:id="@+id/shijian"
                android:icon="@drawable/rili"
                android:title="@string/cebianlan_item6"/>
        </menu>
    </item>

</menu>