<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/information"
    android:layout_marginTop="150dp">

    <!--Information about the personal interface-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/b22"
        android:textColor="@color/Lime"
        android:textSize="24dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/b33"
        android:textColor="@color/Lime"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">


    </LinearLayout>

    <Button
        android:id="@+id/yes1111"
        android:layout_width="34dp"
        android:layout_height="16dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/button1"
        android:text="@string/b1" />

</LinearLayout>