<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="200dp"
    android:layout_marginTop="100dp"
    android:background="@android:drawable/editbox_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!--Quit Dialog-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/mydialogue1"
        android:textColor="@color/Black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes1"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            android:text="@string/b1"
            android:textColor="#191717" />

        <Button
            android:id="@+id/no1"
            android:layout_width="83dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            android:text="@string/b2"
            android:textColor="#191717" />


    </LinearLayout>

</LinearLayout>