<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@drawable/choose_editt"
        android:hint="@string/mine1"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:paddingLeft="19dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_editt"
        android:drawablePadding="12dp"
        android:hint="@string/mine2"
        android:drawableStart="@drawable/pass"
        android:paddingLeft="19dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/choose_editt"
        android:hint="@string/mine5"
        android:drawableStart="@drawable/username"
        android:paddingLeft="19dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/cpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_editt"
        android:hint="@string/mine7"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/pass"
        android:paddingLeft="19dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/mine6"
        android:textColor="@color/cebianlan_buttontext"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>