<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_editt"
        android:hint="@string/mine2"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="12dp"
        android:paddingLeft="19dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@drawable/choose_editt"
        android:hint="@string/mine1"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:paddingLeft="19dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/mine3"
        android:textColor="@color/cebianlan_buttontext"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/mine4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />


</androidx.constraintlayout.widget.ConstraintLayout>