<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="320dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/mine_page_header"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:srcCompat="@drawable/mine_person" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView1"
                    app:layout_constraintEnd_toStartOf="@+id/imageView1"
                    app:layout_constraintTop_toTopOf="@+id/imageView1"
                    app:srcCompat="@drawable/heart" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="216dp"
                    android:layout_height="242dp"
                    android:layout_marginStart="-20dp"
                    android:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/header_person" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="60dp"
                    android:text="Polarbear"
                    android:textColor="@color/Deep_Purple"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome"
                    android:textColor="@color/Deep_Purple"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@drawable/button1"
                android:layout_height="130dp"
                android:layout_margin="16dp"
                >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="172dp"
                    android:layout_height="108dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/new_cartoon" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/m1"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m2"
                    android:textColor="@color/Red"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m3"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/mine_page_buttom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/personal_information"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/personal_information" />

                        <TextView
                            android:id="@+id/personal_information1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="Information"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/mine_page_buttom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/account_information"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/account_information" />

                        <TextView
                            android:id="@+id/account_information1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="Account"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/mine_page_buttom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/integral"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/integral" />

                        <TextView
                            android:id="@+id/integral1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="integral"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/mine_page_buttom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/inbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/inbox" />

                        <TextView
                            android:id="@+id/inbox1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/b44"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/mine_page_buttom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/setting00"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/setting1" />

                        <TextView
                            android:id="@+id/setting001"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/b55"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/mine_page_buttom"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/complaint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/handin" />

                        <TextView
                            android:id="@+id/complaint1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/b66"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>